tests/negative/test_decl_bad_sep.orb
fnc main() {
    let c8 a = 'a' ) b = 'b';
}